fixed component not centered

--- a/src/components/calculator/calculator.component.scss
+++ b/src/components/calculator/calculator.component.scss
@@ -80,6 +80,7 @@ button {
 
 .Calculator {
     display: flex;
+    justify-content: center;
     // background-color: red;
     width: 100%;
 }
